--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">HOW OLD CAMERA</string>
+    <string name="app_label">HOW OLD</string>
 
     <string name="main_loading">Analysing…</string>
     <string name="main_pick_camera_fail">Sorry, open camera fail</string>
