--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,10 +3,10 @@
     <string name="app_label">年龄相机</string>
 
     <string name="main_loading">分析中…</string>
-    <string name="main_pick_camera_fail">抱歉，无法打开相机</string>
-    <string name="main_pick_gallery_fail">抱歉，无法打开图库</string>
+    <string name="main_pick_camera_fail">无法打开相机</string>
+    <string name="main_pick_gallery_fail">无法打开图库</string>
     <string name="main_get_img_fail">获取图片失败</string>
-    <string name="main_analyze_fail">抱歉，图片分析失败</string>
+    <string name="main_analyze_fail">图片分析失败</string>
     <string name="main_analyze_no_face">没有找到脸蛋哦</string>
     <string name="main_tv_camera">相机</string>
     <string name="main_tv_gallery">图库</string>
@@ -19,7 +19,7 @@
     <string name="action_web">搜索脸蛋</string>
     <string name="action_feedback">反馈</string>
 
-    <string name="share_fail">抱歉，没有找到分享APP</string>
+    <string name="share_fail">没有找到分享APP</string>
     <string name="share_select_title">选择APP</string>
 
     <string name="hello_world">Hello world!</string>
