--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HOW OLD CAMERA</string>
+    <string name="app_name">How Old You Look</string>
     <string name="app_label">HOW OLD</string>
 
     <string name="main_loading">Analysing…</string>
