--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <resources>
     <string name="app_name">年龄相机</string>
     <string name="app_label">年龄相机</string>
