--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <resources>
     <string name="app_name">How Old You Look</string>
     <string name="app_label">HOW OLD</string>
